feat: adds tcp endpoints

--- a/src/common/config/cors-config/cors-config.json
+++ b/src/common/config/cors-config/cors-config.json
@@ -1,6 +1,9 @@
 {
   "development": [
-    "http://localhost:3000"
+    "http://localhost:3000",
+    "http://localhost:8080"
   ],
-  "production": []
+  "production": [
+    "http://nwcs.apollo.yzi.ch"
+  ]
 }
