--- a/env.example
+++ b/env.example
@@ -2,7 +2,7 @@
 DATABASE_HOST=localhost
 DATABASE_USER=root
 DATABASE_PASSWORD=1234
-DATABASE_NAME=iotmaps
+DATABASE_NAME=
 DATABASE_TYPE=mysql
 DATABASE_PORT=3306
 DATABASE_SYNCHRONIZE=false
